--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,11 @@ registries:
   maven-postal:
     type: maven-repository
     url: https://packagecloud.io/priv/0183ed20e053523658b87ff4c44d1ac970254c28e7161597/ivanreyes_rb/maven/maven2
+  updates:
 
+    - package-ecosystem: "maven"
+      directory: "/"
+      registries:
+        - maven-postal
   schedule:
     interval: "weekly"
