--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,7 +13,9 @@ registries:
   updates:
     - package-ecosystem: "maven"
       directory: "/"
+      schedule:
+        interval: "daily"
+        time: "09:00"
       registries:
         - maven-postal
-  schedule:
-    interval: "weekly"
+  
