Attempt to link dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,8 @@ registries:
   maven-postal:
     type: maven-repository
     url: https://packagecloud.io/priv/ivanreyes_rb/maven/maven2
-    token: 0183ed20e053523658b87ff4c44d1ac970254c28e7161597
+    username: ivanreyes_rb
+    password: NanaSaito2020
 updates:
   - package-ecosystem: "maven"
     directory: "/"
