dependabot ready to rock

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,8 +9,8 @@ registries:
   maven-postal:
     type: maven-repository
     url: https://packagecloud.io/priv/ivanreyes_rb/maven/maven2
-    username: ivanreyes_rb
-    password: NanaSaito2020
+    username: 
+    password: 
 updates:
   - package-ecosystem: "maven"
     directory: "/"
