Added PC user and pass

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,8 +9,8 @@ registries:
   maven-postal:
     type: maven-repository
     url: https://packagecloud.io/priv/ivanreyes_rb/maven/maven2
-    username: 
-    password: 
+    username: ${{ secrets.PC_USERNAME }}
+    password: ${{ secrets.PC_PASSWORD }}
 updates:
   - package-ecosystem: "maven"
     directory: "/"
