--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ registries:
   maven-postal:
     type: maven-repository
     url: https://packagecloud.io/priv/ivanreyes_rb/maven/maven2
-    username: ivanreyes_RB
+    username: ivanreyes_rb
     password: ${{ secrets.PC_PASSWORD }}
 updates:
   - package-ecosystem: "maven"
