--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,9 +8,9 @@ version: 2
 registries:
   maven-postal:
     type: maven-repository
-    url: https://packagecloud.io/priv/ivanreyes_rb/maven/maven2
-    username: ivanreyes_rb
-    password: ${{ secrets.PC_PASSWORD }}
+    url: https://a7e204afaf9b.ngrok.io/priv/ivan/java/maven2
+    username: ivan
+    password: password
 updates:
   - package-ecosystem: "maven"
     directory: "/"
