--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <repositories>
   <repository>
-    <id>ivanreyes_rb-maven</id>
-    <url>https://packagecloud.io/priv/${token}/ivanreyes_rb/maven/maven2</url>
+    <id>ivan-java</id>
+    <url>http://lvh.me/priv/7184e654516d5cb62d462528be6dbc29beb594cd36462f46/ivan/java/maven2</url>
     <releases>
       <enabled>true</enabled>
     </releases>
