--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <repositories>
   <repository>
     <id>ivan-java</id>
-    <url>http://lvh.me/priv/7184e654516d5cb62d462528be6dbc29beb594cd36462f46/ivan/java/maven2</url>
+    <url>http://a7e204afaf9b.ngrok.io/priv/7184e654516d5cb62d462528be6dbc29beb594cd36462f46/ivan/java/maven2</url>
     <releases>
       <enabled>true</enabled>
     </releases>
