--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,21 @@
-<repositories>
-  <repository>
-    <id>ivan-java</id>
-    <url>http://a7e204afaf9b.ngrok.io/priv/7184e654516d5cb62d462528be6dbc29beb594cd36462f46/ivan/java/maven2</url>
-    <releases>
-      <enabled>true</enabled>
-    </releases>
-    <snapshots>
-      <enabled>true</enabled>
-    </snapshots>
-  </repository>
-</repositories>
-<dependency>
-  <groupId>io.packagecloud</groupId>
-  <artifactId>packagecloud-test</artifactId>
-  <version>0.0.1</version>
-</dependency>
+<project>
+  <repositories>
+    <repository>
+      <id>ivan-java</id>
+      <url>http://a7e204afaf9b.ngrok.io/priv/7184e654516d5cb62d462528be6dbc29beb594cd36462f46/ivan/java/maven2</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+  <dependencies>
+    <dependency>
+      <groupId>io.packagecloud</groupId>
+      <artifactId>packagecloud-test</artifactId>
+      <version>0.0.1</version>
+    </dependency>
+  </dependencies>
+</project>
